--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,27 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependency directories
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Environment secrets
+.env
 
-# testing
-/coverage
-
-# production
+# Build outputs
 /build
+/dist
 
-# misc
+# Misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.log
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# IDE and editor directories
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Optional: OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Optional: Yarn package lock file (if you're using npm exclusively)
+yarn.lock
