--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,31 +1,21 @@
 name: "publish npm"
 
-on:
-  push:
-    branches:
-      - main  # Or master, depending on your default branch name
-    tags:
-      - 'v*'  # Ensures action is only run on tagged commits
+on: push
 
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      
-      - name: Use Node.js
-        uses: actions/setup-node@v1
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: node
+        uses: actions/setup-node@v2
         with:
-          node-version: '14'  # Specify the Node.js version you are using
+          node-version: '14' 
           registry-url: https://registry.npmjs.org/
       
-      - name: Install Dependencies
-        run: npm install
-        
-      - name: Build
-        run: npm run build  # Or any other command that prepares your package for publication
-      
-      - name: Publish to npm
+      - name: publish
         run: npm publish --access public
+        working-directory: my-package
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
