--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,21 +1,31 @@
-name: "publish npm"
+name: Build and Publish to npm
 
-on: push
+on:
+  push:
+    branches:
+      - main  # Or master, depending on your default branch name
+    tags:
+      - 'v*'  # Ensures action is only run on tagged commits
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: node
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14' 
-          registry-url: https://registry.npmjs.org/
+      - uses: actions/checkout@v2
       
-      - name: publish
-        run: npm publish --access public
-        working-directory: my-package
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '14'  # Specify the Node.js version you are using
+          registry-url: 'https://registry.npmjs.org/'
+      
+      - name: Install Dependencies
+        run: npm install
+        
+      - name: Build
+        run: npm run build  # Or any other command that prepares your package for publication
+      
+      - name: Publish to npm
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
